--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "devDependencies": {
     "jest-expo": "~27.0.0",
+    "prettier": "^1.13.7",
     "react-native-scripts": "1.14.0",
     "react-test-renderer": "16.3.1"
   },
