--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo": "^27.0.1",
     "prop-types": "^15.6.2",
     "react": "16.3.1",
-    "react-native": "~0.55.2"
+    "react-native": "~0.55.2",
+    "react-navigation": "^2.5.5"
   }
 }
