--- a/app.json
+++ b/app.json
@@ -1,10 +1,11 @@
 {
   "expo": {
     "sdkVersion": "27.0.0",
-    "name": "gwi",
+    "name": "Korean Ear Trainer",
     "slug": "gwi",
+    "privacy": "public",
     "version": "0.1.0",
-    "description": "",
+    "description": "Practice listening to commonly confused Korean sounds and quiz yourself to see if you can distinguish them.",
     "githubUrl": "https://github.com/ryanbrainard/gwi",
     "icon": "./assets/images/gwi-logo-green-1024.png",
     "primaryColor": "#3CB371"
