--- a/app.json
+++ b/app.json
@@ -3,6 +3,7 @@
     "sdkVersion": "27.0.0",
     "name": "Korean Ear Trainer",
     "slug": "gwi",
+
     "privacy": "public",
     "version": "0.1.0",
     "description": "Practice listening to commonly confused Korean sounds and quiz yourself to see if you can distinguish them.",
@@ -11,6 +12,12 @@
     "primaryColor": "#3CB371",
     "splash": {
       "image": "assets/images/gwi-logo-black-trans-1200.png"
+    },
+    "ios": {
+      "bundleIdentifier": "com.ryanbrainard.gwi"
+    },
+    "android": {
+      "package": "com.ryanbrainard.gwi"
     }
   },
   "assetBundlePatterns": [
