--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
         
       # run tests!
-      - run: test -f .secrets.json || cat '{}' > .secrets.json
+      - run: test -f .secrets.json || echo '{}' > .secrets.json
       - run: yarn test
 
 
