--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "16.3.1",
     "react-native": "~0.55.2",
     "react-native-snap-carousel": "^3.7.2",
-    "react-navigation": "^2.5.5"
+    "react-navigation": "^2.5.5",
+    "sentry-expo": "^1.11.0"
   }
 }
