--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native": "~0.55.2",
     "react-native-snap-carousel": "^3.7.2",
     "react-navigation": "^2.5.5",
-    "sentry-expo": "^1.11.0"
+    "sentry-expo": "^1.11.0",
+    "uuid": "^3.3.2"
   }
 }
