--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "sdkVersion": "27.0.0",
-    "name": "Korean Ear Trainer",
+    "name": "Korean Ear",
     "slug": "gwi",
     "privacy": "public",
     "version": "0.1.10",
